NEXT-1825 - Fix Customer Address & Order Page

--- a/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
+++ b/Resources/administration/src/module/sw-customer/page/sw-customer-detail/sw-customer-detail.html.twig
@@ -12,7 +12,7 @@
                     <sw-button v-if="!customerEditMode && !createMode"
                                class="sw-customer-detail__open-edit-mode-action"
                                variant="primary"
-                               :disabled="customer.isLoading"
+                               :disabled="customer.isLoading || isOrderPage"
                                @click.prevent="onActivateCustomerEditMode">
                         {{ $tc('sw-customer.detail.buttonEdit') }}
                     </sw-button>
