NEXT-1756 - Styling and code fixes

--- a/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-address-form/sw-customer-address-form.html.twig
@@ -133,7 +133,7 @@
             <sw-attribute-set-renderer
                     v-if="next754"
                     :entity="address"
-                    variant="modal"
+                    variant="tabs"
                     :sets="attributeSets">
             </sw-attribute-set-renderer>
         {% endblock %}
