--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -54,11 +54,13 @@
                         {% endblock %}
 
                         {% block sw_customer_detail_attribute_sets %}
-                            <sw-attribute-set-renderer
-                                    v-if="next754"
-                                    :entity="customer"
-                                    :sets="customerAttributeSets">
-                            </sw-attribute-set-renderer>
+                            <sw-card>
+                                <sw-attribute-set-renderer
+                                        v-if="next754"
+                                        :entity="customer"
+                                        :sets="customerAttributeSets">
+                                </sw-attribute-set-renderer>
+                            </sw-card>
                         {% endblock %}
                     </div>
                 {% endblock %}
