--- a/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-translated-labels/sw-attribute-translated-labels.html.twig
+++ b/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-translated-labels/sw-attribute-translated-labels.html.twig
@@ -22,7 +22,7 @@
                                 :key="locale"
                                 variant="minimal"
                                 :name="locale"
-                                :active="active">
+                                :activeTab="active">
                             {{ $tc(`locale.${locale}`) }}
                         </sw-tabs-item>
                     </template>
