--- a/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-type-select/sw-attribute-type-select.scss
+++ b/Resources/administration/src/module/sw-settings-attribute/component/sw-attribute-type-select/sw-attribute-type-select.scss
@@ -1,6 +1,6 @@
 @import "~scss/variables";
 
-.sw-attribute-type-select {
+.sw-attribute-type-base {
 	.sw-attribute-type-select__delete-option-button {
 		background: none;
 		color: $color-crimson;
