--- a/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
+++ b/Resources/administration/src/app/component/form/sw-select/sw-select.html.twig
@@ -11,10 +11,12 @@
          @keydown.down.prevent="navigateDownResults">
 
         {% block sw_select_label %}
-            <label v-if="getInlineSnippet(label)" :for="selectId" class="sw-select__label">
+            <label v-if="getInlineSnippet(label)" @click="log()" :for="selectId" class="sw-select__label">
                 {{ getInlineSnippet(label) }}
             </label>
         {% endblock %}
+
+        <slot></slot>
 
         {% block sw_select_inner %}
             <div class="sw-select__inner">
