NEXT-1756 - Make entityName a private variable in data classes

--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -75,7 +75,7 @@
                                 :allowMultiSelect="false"
                                 variant="regular"
                                 :label="$tc('sw-manufacturer.detail.labelLogo')"
-                                :defaultFolder="manufacturer.entityName"
+                                :defaultFolder="manufacturer.getEntityName()"
                                 @sw-media-upload-new-uploads-added="onUploadAdded"
                                 @sw-media-upload-media-upload-success="setMediaItem"
                                 @sw-media-upload-open-sidebar="openMediaSidebar"
