--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-sidebar/sw-media-sidebar.html.twig
@@ -7,14 +7,14 @@
         {% block sw_media_sidebar_item_quickinfo_content %}
             <div class="sw-media-sidebar__quickinfo-scroll-container">
                 <sw-media-quickinfo
-                    v-if="isSingleFile && firstEntity.entityName === 'media'"
+                    v-if="isSingleFile && firstEntity.getEntityName() === 'media'"
                     :item="firstEntity"
                     :editable="editable"
                     v-on="$listeners">
                 </sw-media-quickinfo>
 
                 <sw-media-folder-info
-                    v-else-if="isSingleFile && firstEntity.entityName === 'media_folder'"
+                    v-else-if="isSingleFile && firstEntity.getEntityName() === 'media_folder'"
                     :mediaFolder="firstEntity"
                     :editable="editable"
                     v-on="$listeners">
