--- a/Resources/administration/src/app/assets/scss/global.scss
+++ b/Resources/administration/src/app/assets/scss/global.scss
@@ -1,3 +1,5 @@
+@import '~scss/variables';
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -22,4 +24,8 @@ html, body, #app {
     position: absolute;
     background: $color-drag-select-box;
     z-index: $z-index-drag-select-box;
+}
+
+.link {
+    color: $color-shopware-blue;
 }
