NTR - Use new components and small polishing

--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.html.twig
@@ -5,10 +5,10 @@
 
     <div class="sw-plugin-store-login-status__login-box">
         <div class="sw-plugin-store-login-status__box-content">
-            <sw-avatar size="36px" placeholder></sw-avatar>
+            <sw-avatar size="36px" color="#E3F3FF" placeholder></sw-avatar>
             <div class="sw-plugin-store-login-status__account-info">
-                <span class="sw-plugin-store-login-status__name">Test Mensch</span>
-                <span class="sw-plugin-store-login-status__email">test@testmensch.de</span>
+                <span class="sw-plugin-store-login-status__name">Florian Klockenkemper</span>
+                <span class="sw-plugin-store-login-status__email">fk@shopware.com</span>
             </div>
         </div>
         <sw-context-button class="sw-plugin-store-login-status__context-button" icon="default-action-more-vertical" :menuOffsetLeft="17">
