--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.scss
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login-status/sw-plugin-store-login-status.scss
@@ -5,6 +5,8 @@
     .sw-plugin-store-login-status__name {
         font-weight: 600;
         font-size: 14px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
     }
 
     .sw-plugin-store-login-status__email {
