--- a/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
+++ b/Resources/administration/src/module/sw-plugin/component/sw-plugin-store-login/sw-plugin-store-login.html.twig
@@ -1,4 +1,4 @@
-<sw-modal class="sw-plugin-store-login" v-if="showModal" @closeModal="onCloseModal()" noHeader>
+<sw-modal class="sw-plugin-store-login" v-if="showModal" @closeModal="onCloseModal()" :showHeader="false">
     <div class="sw-plugin-store-login__close-button-container">
         <button class="sw-modal__close"
                 :title="$tc('global.sw-modal.labelClose')"
