--- a/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
+++ b/Resources/administration/src/module/sw-plugin/page/sw-plugin-manager/sw-plugin-manager.scss
@@ -14,6 +14,11 @@
 
     }
 
+    .plugin-manager-sidebar {
+        position: absolute;
+        top: 100px;
+    }
+
     .sw-empty-state {
         position: relative;
     }
