--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
@@ -55,8 +55,7 @@
                 <sw-grid-column flex="minmax(100px, 1fr)"
                                 :label="$tc('sw-plugin.list.columnPluginName')"
                                 dataIndex="label"
-                                truncate
-                                sortable>
+                                truncate>
                     {% block sw_plugin_list_grid_columns_customer_name_label %}
                     <div class="sw-plugin-list__plugin-info-container">
                         <img v-if="item.iconUrl" :src="item.iconUrl" />
@@ -69,29 +68,29 @@
                 </sw-grid-column>
                 {% endblock %}
 
-                {% block sw_plugin_list_grid_columns_version %}
-                    <sw-grid-column flex="minmax(80px, 100px)"
-                                    :label="$tc('sw-plugin.list.columnVersion')"
-                                    dataIndex="version"
-                                    truncate
-                                    sortable>
-                        {% block sw_plugin_list_grid_columns_version_label %}
-                            {{ item.version }}
+                {% block sw_plugin_list_grid_columns_activated %}
+                    <sw-grid-column flex="minmax(80px, 150px)"
+                                    :label="$tc('sw-plugin.list.columnActive')"
+                                    dataIndex="active"
+                                    truncate>
+                        {% block sw_plugin_list_grid_columns_activated_label %}
+                            <sw-field type="switch"
+                                      :disabled="!item.installedAt"
+                                      :label="item.active ? 'Aktiviert' : 'Deaktiviert'"
+                                      v-model="item.active"
+                                      v-on:change="changeActiveState(item)">
+                            </sw-field>
                         {% endblock %}
                     </sw-grid-column>
                 {% endblock %}
 
-                {% block sw_plugin_list_grid_columns_activated %}
-                    <sw-grid-column flex="minmax(80px, 120px)"
-                                    :label="$tc('sw-plugin.list.columnActive')"
-                                    dataIndex="active"
-                                    truncate
-                                    sortable>
-                        {% block sw_plugin_list_grid_columns_activated_label %}
-                            <sw-icon name="small-default-checkmark-line-medium" small v-if="item.active"
-                                     class="is--active"></sw-icon>
-                            <sw-icon name="small-default-x-line-medium" small v-else
-                                     class="is--inactive"></sw-icon>
+                {% block sw_plugin_list_grid_columns_version %}
+                    <sw-grid-column flex="minmax(80px, 100px)"
+                                    :label="$tc('sw-plugin.list.columnVersion')"
+                                    dataIndex="version"
+                                    truncate>
+                        {% block sw_plugin_list_grid_columns_version_label %}
+                            {{ item.version }}
                         {% endblock %}
                     </sw-grid-column>
                 {% endblock %}
@@ -103,37 +102,37 @@
                     <sw-context-button>
 
                         {% block sw_plugin_list_grid_columns_actions_install %}
-                            <sw-context-menu-item @click="onInstallPlugin(item)">
-                            {{ $tc('sw-plugin.list.contextInstall') }}
+                            <sw-context-menu-item v-if="!item.installedAt" @click="onInstallPlugin(item)">
+                                {{ $tc('sw-plugin.list.contextInstall') }}
                             </sw-context-menu-item>
                             {% endblock %}
 
                             {% block sw_plugin_list_grid_columns_actions_uninstall %}
-                            <sw-context-menu-item variant="danger" @click="onUninstallPlugin(item)">
+                            <sw-context-menu-item v-if="item.installedAt" @click="onUninstallPlugin(item)">
                                 {{ $tc('sw-plugin.list.contextUninstall') }}
                             </sw-context-menu-item>
                             {% endblock %}
 
                             {% block sw_plugin_list_grid_columns_actions_activate %}
-                            <sw-context-menu-item @click="onActivatePlugin(item)">
+                            <sw-context-menu-item v-if="item.installedAt && !item.active" @click="onActivatePlugin(item)">
                                 {{ $tc('sw-plugin.list.contextActivate') }}
                             </sw-context-menu-item>
                             {% endblock %}
 
                             {% block sw_plugin_list_grid_columns_actions_deactivate %}
-                            <sw-context-menu-item @click="onDeactivatePlugin(item)">
+                            <sw-context-menu-item v-if="item.active" @click="onDeactivatePlugin(item)">
                                 {{ $tc('sw-plugin.list.contextDeactivate') }}
                             </sw-context-menu-item>
                             {% endblock %}
 
                             {% block sw_plugin_list_grid_columns_actions_update %}
-                            <sw-context-menu-item @click="onUpdatePlugin(item)">
+                            <sw-context-menu-item v-if="item.upgradeVersion" @click="onUpdatePlugin(item)">
                             {{ $tc('sw-plugin.list.contextUpdate') }} {{ item.upgradeVersion }}
                             </sw-context-menu-item>
                         {% endblock %}
 
                         {% block sw_plugin_list_grid_columns_actions_delete %}
-                        <sw-context-menu-item @click="onDeletePlugin(item)">
+                        <sw-context-menu-item v-if="!item.installedAt" @click="onDeletePlugin(item)">
                             {{ $tc('sw-plugin.list.contextDelete') }}
                         </sw-context-menu-item>
                         {% endblock %}
