--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -278,7 +278,7 @@
             <sw-attribute-set-renderer
                     v-if="next754"
                     :entity="item"
-                    variant="collapse"
+                    variant="media-collapse"
                     @sw-attribute-set-renderer-save="item.save()"
                     :sets="attributeSets">
             </sw-attribute-set-renderer>
