--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -1,11 +1,14 @@
 {% block sw_condition_base_fields %}
     {% block sw_condition_date_range_field_use_time %}
-        <sw-field type="switch"
-                  name="useTime"
-                  :label="$tc('global.sw-condition.condition.dateRangeRule.useTime')"
-                  v-model="useTime"
-                  class="has--arrow">
-        </sw-field>
+        <sw-select name="useTime"
+                   :id="createId()"
+                   itemValueKey="value"
+                   displayName="label"
+                   :store="selectValues"
+                   :required="true"
+                   v-model="useTime"
+                   class="field--main has--arrow">
+        </sw-select>
     {% endblock %}
     {% block sw_condition_date_range_field_from_date %}
         <sw-field type="date"
