--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -57,12 +57,12 @@
                                     </sw-field>
                                 {% endblock %}
                                 {% block sw_settings_rule_detail_content_card_field_type %}
-                                    <sw-condition-value v-if="rule.moduleTypes"
+                                    <sw-condition-value v-if="moduleTypes"
                                                         multi
                                                         id="ruleType"
                                                         :label="$tc('sw-settings-rule.detail.labelType')"
                                                         :store="moduleTypeStore"
-                                                        v-model="rule.moduleTypes.types">
+                                                        v-model="moduleTypes">
                                     </sw-condition-value>
                                 {% endblock %}
                         </sw-container>
