--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.scss
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-order/sw-customer-detail-order.scss
@@ -2,4 +2,12 @@
     .sw-customer-detail-order-toolbar {
         padding: 20px;
     }
+
+    .sw-empty-state {
+        position: relative;
+    }
+
+    .sw-customer-detail-order__content {
+        position: relative;
+    }
 }
