--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.scss
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-info/sw-customer-base-info.scss
@@ -5,6 +5,7 @@ $sw-customer-detail-base-color-text: $color-gutenberg;
 .sw-customer-base-info {
     color: $sw-customer-detail-base-color-text;
     font-size: 14px;
+    margin-bottom: 16px;
 
     .sw-customer-base-info-columns {
         dt {
@@ -12,7 +13,7 @@ $sw-customer-detail-base-color-text: $color-gutenberg;
         }
 
         dd {
-            padding: 4px;
+            padding: 1px 4px;
         }
     }
 }
